[gd_scene load_steps=2 format=3 uid="uid://btege1qjtd5bi"]

[ext_resource type="Script" uid="uid://dqlkewn12kb4e" path="res://ui.gd" id="1_fyqef"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fyqef")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HealthLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Health:"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="SanityLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Sanity:"

[node name="SanityBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Time: 0"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
